2008-04-02  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/update-notifier.c (create_new_updates_menu): Added some
	extra checks to avoid risky situations that could lead to invalid
	memory reads (N83127).
	(create_new_notifications_menu): Likewise (N83127).
	(handle_inotify): Likewise (N83127).

2008-04-01  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* repo.cc (cat_dialog_closure): added a pointer to the "New" button
	(show_catalogue_dialog): when the dialog is created, the "New" button
	is insensitive
	(scd_get_catalogues_reply): set the "New" button sensitive after the
	repositories have been set. Partial fix for N83462.

	* repo.cc (insensitive_cat_edit_press): show a banner with
	"ai_ib_unable_edit"
	(show_catalogue_dialog): on "insensitive_press" on the Edit
	button, a banner is shown using insensitive_cat_edit_press()
	(N83422).

	* xexp.c (xexp_rest, xexp_rest, xexp_is_text): NULL ckeck.
	Partial fix for N83462.

	* src/util.cc : defined ENTERTAINMENT_LABEL_MAX_WIDTH, the max. width
	of the title label in the entertainment dialog.
	(start_entertaining_user, entertainment_update_title): if the title
	label is wider than ENTERTAINMENT_LABEL_MAX_WIDTH it will be
	ellipsized and its required width will be the same as if it hadn't
	been ellipsized (ellipsized labels only require size for the '...',
	so by doing this we force the resizing of the dialog). This is an
	improvement on the fix for N83057.

2008-04-01  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/update-notifier.c (str_substitute): Handle NULL strings
	without a critical warning.

2008-04-01  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/util.h, src/util.cc (entertainment_update_title): Moved code
	for ellipsizing the main title text, and better setting the size
	of dialog to its right place (N83057).
	(show_file_chooser_for_save): Added a new parameter to allow
	setting the default folder from the calling fuction (N80933).
