@@ -1,3 +1,3 @@
-user ALL = NOPASSWD: /usr/libexec/apt-worker.bin
+user ALL = NOPASSWD: /usr/libexec/apt-worker
 user ALL = NOPASSWD: /usr/bin/hildon-application-manager-util restore-catalogues
 user ALL = NOPASSWD: /usr/bin/hildon-application-manager-util restore-catalogues2
